Matlab Light Field Toolbox
Copyright (c) 2013-2020 Donald G. Dansereau

Please refer to README.md and LFToolbox.pdf for installation instructions and further information.


---v0.6----------------------------------------------------------------------

Reverse compatibility:
- White image and calibration database formats changed, re-run LFUtilProcessWhiteImages and LFUtilProcessCalibrations; note that grid analysis and calibrations don't need to re-run, only the database file needs to be re-generated.
- LFUtilDecodeLytroFolder RectOptions.CalibrationDatabaseFname is now split into CalibrationDatabaseFname and CalibrationDatabasePath.

New features:
- Using .json file format for white image and calibration file databases
- Added FileOptions.OutputPath parameter to allow LFUtilProcessWhiteImages, LFUtilDecodeLytroFolder, LFUtilCalLensletCam, and LFUtilProcessCalibrations to save in specified output folders, leaving input folders untouched
- LFBuild2DLPF, LFBuild4DLPF for frequency-domain lowpass filters, optionally anisotropic
- Smarter search for of white image and calibration databases decoding and rectifying; More informative error messages when locating white databases / files

---v0.5.1----------------------------------------------------------------------
Minor bug fixes and improvements

- LFWriteMetadata now supports writing of simple class objects
- LFGatherCamInfo uses unit_info.json on Lytro cameras that have it, fixes serial number mismatch for these cameras

---v0.5------------------------------------------------------------------------
Mostly reverse-compatible. White images and calibrations should be re-processed. See LFToolbox.pdf for details.

New Features :
- Linear refocus super-resolution via LFFiltShiftSum parameter UpsampRate, see LFDemoRefocusSuperres
- New display functions LFDispLawnmower, LFDispTiles, LFDispTilesSubfigs, LFDispProj, LFDispProjSubfigs
- LFReadESLF, LFWriteESLF: Read / write ESLF files